# scrum

./: .gitignore  Cargo.toml  README.md  ticketdb.json  ticketdb_backup.json
db_sample/: ticketdb.json
scrum-lib/: README.md
scrum-lib/src/: lib.rs
scrum-lib2/: Cargo.toml
scrum-lib2/src/: lib.rs
scrum-server/: Cargo.toml  README.md  ticketdb.json
scrum-server/src/: main.rs
src/: app.rs  client.rs  db.rs  form.rs  input_sample.rs  main.rs  temp.rs  theme.rs  ticket.rs  ui.rs
