[package]
name = "scrum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.18", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.23", features = [ "serde" ] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0"

tokio = { version = "1.18.1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
futures = "0.3.21"
scrum-lib = { path = "./scrum-lib" }
unicode-width = "0.1.9"